<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   app:flow_verticalAlign="center"
                                                   tools:context=".Courses">

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:alpha="0.2"
            android:background="@drawable/background"
            app:layout_constraintTop_toTopOf="parent"></ImageView>
    <EditText
            android:id="@+id/insertCourseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:hint="@string/txtInsertCourseTitle"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintHorizontal_bias="0.552"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    //Btn Start Term


    <TextView
            android:id="@+id/lblStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:text="@string/lblCourseStartDate"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.247"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:id="@+id/startDatePicker"
            style="?android:spinnerStyle"
            android:layout_width="135dp"
            android:layout_height="59dp"
            android:onClick="openDatePicker"
            android:text="JAN 01 2020"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/imageView2" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="228dp" android:layout_marginLeft="56dp" android:layout_marginStart="56dp"/>
    <TextView
            android:id="@+id/endTermView"
            android:layout_width="86dp"
            android:layout_height="23dp"
            android:layout_marginTop="148dp"
            android:text="End Date:"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:id="@+id/endDatePicker"
            style="?android:spinnerStyle"
            android:layout_width="141dp"
            android:layout_height="53dp"
            android:onClick="openDatePicker"
            android:text="JAN 01 2020"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/startDatePicker" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="48dp" android:layout_marginTop="228dp" android:layout_marginStart="48dp"/>
    <TextView
            android:id="@+id/courseStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="336dp"
            android:text="@string/course_status"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.182"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/courseInstructor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="420dp"
            android:text="@string/course_instructor"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.196"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/coursesToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3C32C8"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:text="@string/toolbarCourses"
            android:textColor="@color/white"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <Spinner
            android:id="@+id/courseSpinner"
            android:layout_width="147dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/courseStatus"
            android:layout_marginTop="324dp" android:layout_marginLeft="72dp" android:layout_marginStart="72dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:id="@+id/instructorInput"
            android:hint="Enter couurse instructor name"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="420dp" app:layout_constraintStart_toEndOf="@+id/courseInstructor"
            android:layout_marginLeft="60dp" android:layout_marginStart="60dp">

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>